--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -32,7 +32,7 @@ nav {
 
 .nav_btn:hover {
   cursor: pointer;
-  color: rgb(63, 135, 109);
+  color: rgb(229, 102, 39);
   background-color: rgb(0, 0, 0);
   font-weight: bold;
 }
@@ -115,4 +115,24 @@ svg {
 svg:hover {
   transform: rotate(360deg);
 } 
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal_content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 4px;
+  text-align: center;
+}
+
 
