--- a/src/components/homeComponents/Home.module.css
+++ b/src/components/homeComponents/Home.module.css
@@ -1,4 +1,4 @@
-.ad_banner {
+/* .ad_banner {
     width: 100%;
     height: 500px;
     display: flex;
@@ -10,96 +10,103 @@
     background-size: cover;
     background-repeat: no-repeat;
     border-bottom: 4px solid white;
-  }
-  
-  .ad_text {
-    width: 880px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    text-align: center;
-    align-items: center;
-    gap: 15px;
-  }
-  
-  h1 {
-    color:  rgb(237, 101, 32);
-    font-size: 64px;
-    font-weight: bold;
-    display: flex;
-    flex-wrap: wrap;
-    
-    
-  }
-  
-  h2 {
-    display: flex;
-    flex-wrap: wrap;
-    color:rgb(229, 102, 39);
-    font-size: 46px;
-    font-weight: bold;
-    
-  }
-  
-  h3 {
-    font-size: 25px;
-    font-weight: bold;
-    color:rgb(255, 255, 255);
-    flex-wrap: wrap;
-  }
-  
-  .recipe_section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
-  }
-  
-  .recipe_container {
-    display: flex;
-    gap: 50px;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
-  }
-  
-  input:focus {
-    outline: none;
-  }
-  
-  .search_bar svg {
-    height: 80%;
-  }
-  
-  .search_bar input {
-    width: 80%;
-    border-radius: 0 20px 20px 0;
-    font-size: 20px;
-    flex: 1;
-    
-  }
-  
-  input {
-    height: 40px;
-    box-sizing: border-box;
-    margin:0px;
-    padding:0px;
-    border: none;
-    font-weight: bold;
-    background-color: rgb(214, 214, 214);
-    padding-left: 5px;
-  }
-  
-  .search_bar {
-    min-width: 250px;
-    width: 40vw;
-    border-radius: 45px;
-    border: 2px solid rgb(255, 255, 255);
-    background-color: #aae4df51;
-    display: flex;
-    align-items: center;
-    padding: 0 0 0 5px;
-    box-sizing: border-box;
-  }
+  } */
 
-  
+.ad_banner {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  flex-wrap: wrap;
+  background-size: contain; /* or "100% 100%" */
+  border-bottom: 4px solid white;
+}
+
+.ad_text {
+  width: 880px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  text-align: center;
+  align-items: center;
+  gap: 15px;
+}
+
+h1 {
+  color: rgb(237, 101, 32);
+  font-size: 64px;
+  font-weight: bold;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+h2 {
+  display: flex;
+  flex-wrap: wrap;
+  color: rgb(229, 102, 39);
+  font-size: 46px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 25px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  flex-wrap: wrap;
+}
+
+.recipe_section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+}
+
+.recipe_container {
+  display: flex;
+  gap: 50px;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
+
+input:focus {
+  outline: none;
+}
+
+.search_bar svg {
+  height: 80%;
+}
+
+.search_bar input {
+  width: 80%;
+  border-radius: 0 20px 20px 0;
+  font-size: 20px;
+  flex: 1;
+}
+
+input {
+  height: 40px;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  border: none;
+  font-weight: bold;
+  background-color: rgb(214, 214, 214);
+  padding-left: 5px;
+}
+
+.search_bar {
+  min-width: 250px;
+  width: 40vw;
+  border-radius: 45px;
+  border: 2px solid rgb(255, 255, 255);
+  background-color: #aae4df51;
+  display: flex;
+  align-items: center;
+  padding: 0 0 0 5px;
+  box-sizing: border-box;
+}
